# study-tauri-observable

./: Dockerfile  package-lock.json  package.json
.github/workflows/: build.yml
download-page/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: index.html
